--- a/hw04.ipynb
+++ b/hw04.ipynb
@@ -517,7 +517,7 @@
         "plt.show()\n",
         "\n",
         "# 1. What is a typical value for these total incomes?\n",
-        "# The typical value for these total incomes can be observed around the peak of the distribution.\n",
+        "# The typical value for these total incomes can be observed around the peak of the distribution aournf 0.6e7.\n",
         "\n",
         "# 2. Where do most of the observations fall?\n",
         "# Most of the observations fall towards the lower end of the total income range.\n",
